# FaceForge

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/faceforge/detectors/: opencv_dnn.py
src/faceforge/recognizers/: __init__.py
